# prometheus-http-sd

./: Dockerfile  Makefile  README.md  RELEASE_NOTES  prom-http-sd.py  pyproject.toml  requirements.txt
.github/workflows/: ci-test.yml  docker-build.yml  helm-lint.yml
deploy/prom-http-sd/: Chart.yaml  values.yaml
deploy/prom-http-sd/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy/prom-http-sd/templates/tests/: test-connection.yaml
hacks/: env-build.sh  rename-project.sh
prom_http_sd/: __about__.py  __init__.py  __main__.py  utils.py
prom_http_sd/api/: discovery.py
prom_http_sd/models/: discovery.py  targets.py  util_types.py
prom_http_sd/pkgs/: ip_networks.py
resources/: default-conf.yaml  dev-requirements.txt
tests/: test_models_discovery.py  test_models_targets.py  test_models_util_types.py  test_pkgs_ip_networks.py  test_utils.py
