[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prom-http-sd"
dynamic = ["version", "dependencies"]
authors = [
  { name="Dimitar Ivanov", email="dim.iv.ivanov@gmail.com" },
]
description = "Python template project"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = []

[project.urls]
Homepage = "https://github.com/mimiteto/prom-http-sd"
Issues = "https://github.com/mimiteto/prom-http-sd/issues"

[tool.hatch.version]
source = "code"
path = "prom_http_sd/__about__.py"

[tool.hatch.dependencies]
source = "code"
path = "prom_http_sd/__about__.py"
